# oxr-game-upscaler

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/fsr-sys/: Cargo.toml
crates/fsr-sys/src/: api.rs  lib.rs  types.rs  upscale.rs
crates/fsr3-upscaler-proxy/: Cargo.toml
crates/fsr3-upscaler-proxy/src/: dispatch.rs  lib.rs
crates/oxr-amd-fidelityfx-dx12/: Cargo.toml
crates/oxr-amd-fidelityfx-dx12/src/: dispatch.rs  logging.rs  query.rs
crates/oxr-amd-fsr3-upscaler/: Cargo.toml  build.rs
crates/oxr-amd-fsr3-upscaler/src/: dispatch.rs  fsr3_types.rs  gpu_pipeline.rs  imgui_renderer.rs  lib.rs  logging.rs  overlay.rs  settings.rs  sgsr2_state.rs  sgsr2_three_pass_state.rs  upscaler_type.rs
crates/oxr-amd-fsr3-upscaler/src/alg-scale/: blit_ps.hlsl  blit_vs.hlsl  debug_ps.hlsl  imgui_ps.hlsl  imgui_vs.hlsl
crates/oxr-amd-fsr3-upscaler/src/alg-scale/SGSRv2/: sgsr2_convert_ps.hlsl
crates/oxr-amd-fsr3-upscaler/src/alg-scale/SGSRv2/2PassFS/: sgsr2_upscale_ps.hlsl  sgsr2_vs.hlsl
crates/oxr-amd-fsr3-upscaler/src/alg-scale/SGSRv2/3Pass/: sgsr2_3p_activate_ps.hlsl  (+2 more)
crates/oxr-amd-fsr3-upscaler/src/post_processing/: debug_view.rs  mod.rs  rcas.rs
crates/oxr-amd-fsr3-upscaler/src/recording/: extractor.rs  mod.rs  readback.rs  stride.rs  writer.rs
crates/oxr-amd-fsr3-upscaler/src/upscalers/: aa_pass.rs  mod.rs  sgsr2_three_pass.rs  sgsr2_two_pass.rs  simple.rs
crates/oxr-amd-fsr3-upscaler/src/upscalers/shaders/: debug_ps.hlsl  lanczos_ps.hlsl  rcas_ps.hlsl
crates/oxr-dll/: Cargo.toml
crates/oxr-dll/src/: context.rs  dispatch.rs  lib.rs  query.rs
(+4 files in other folders)
