[package]
name = "fsr3-upscaler-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "ffx_fsr3upscaler_x64"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi_Common",
] }
